fix margin on mobile

--- a/src/styles/mainStyles/MainContent.module.css
+++ b/src/styles/mainStyles/MainContent.module.css
@@ -13,6 +13,6 @@
 
 @media screen and (max-width: 600px) {   
     .mainITContainer{
-        margin: 23% 0 0 0;
+        margin: 20% 0 0 0;
     }
 }
